# ml-fullstack-challenge

./: .gitignore  README.md  deploy.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/api/: main.py  models.py  translation_service.py
backend/api/data/: translations.json
backend/api/services/: jeringonza_service.py  translation_service.py
k8s/: README.md  backend.yaml  frontend.yaml
web/: .dockerignore  Dockerfile  README.md  env.deploy.template  env.template  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.vue
web/src/assets/: main.css
web/src/components/: LanguageSelector.vue  ResponseDisplay.vue  TextInput.vue
web/src/constants/: languages.ts
web/src/services/: api.ts
web/src/views/: HomeView.vue
